[package]
name = "wasmtime-alloc"
version = "0.1.0"
authors = ["Radu M <root@radu.sh>"]
edition = "2018"

[dependencies]
wasmtime = "0.22"
wasmtime-wasi = "0.22"
wasi-common = "0.22"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features=["compat"] }
futures = "0.3"
anyhow = "1.0"
